force-app/main/default/objects/Trigger_Setting__mdt/fields/Helper_Class__c.field-meta.xml
<CustomField>
    <fullName>Helper_Class__c</fullName>
    <label>Helper Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>