force-app/main/default/objects/Trigger_Setting__mdt/listViews/All_Cols.listView-meta.xml
<ListView>
    <fullName>All_Cols</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Helper_Class__c</columns>
    <columns>isActive__c</columns>
    <columns>Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>